Add more descriptions Add title for agarthans

--- a/localization/english/concepts/fodlan_places_l_english.yml
+++ b/localization/english/concepts/fodlan_places_l_english.yml
@@ -8,3 +8,6 @@
  game_concept_academy_desc: "Placeholder"
  game_concept_almyra: "Almyra"
  game_concept_almyra_desc: "Placeholder"
+ game_concept_agartha: "Agartha"
+ game_concept_agarthan: "Agarthan"
+ game_concept_agartha_desc: "Placeholder"
