Add Leicester Alliance war startup events

--- a/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
+++ b/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
@@ -5,3 +5,9 @@
  fodlan_unification_war.4.t: "Imperial Invasion Begins"
  fodlan_unification_war.4.desc: "Ravens fly to all corners of Fódlan detailing the arrival of Imperial troops at the foot of #V Garreg Mach Monastary#!.\n\nLoyalists of the [church|E] and [adrestian_empire|E] engage in battle while those who have yet to pick a side come under increasing pressure to declare"
  fodlan_unification_war.4.a: "What will the outcome be?"
+ fodlan_unification_war.2001.t: "Alliance Roundtable Debate"
+ fodlan_unification_war.2001.desc: "A heated debate occurred today at the #V Alliance Roundatable#! as the #V Five Great Lords#! argued over how to respond to the [war_of_unification|E].\n\n#V House Gloucester#! and #V House Ordelia#! insists the best course of action is to join the Empire while the Alliance still has leverage, and has come with promises of autonomy from the crown.\n\nThe ever faithful #V House Edmund#! insists the alliance should aid the [church|E].\n\n#V House Goneril#! is surprisingly absent, having sent a raven insisting their focus is on defending [fodlan|E]s borders.\n\nAlthough sympathetic towards #V House Edmund#!, #V Leader Oswald#! declared the [leicester_alliance|E] shall remain neutral and have no involvement in the war"
+ fodlan_unification_war.2001.a: "Time well tell if this is a wise decision"
+ fodlan_unification_war.2003.t: "War in the Leicester Alliance"
+ fodlan_unification_war.2003.desc: "Despite the proclamation of neutriality by the [leicester_alliance|E], #V House Gloucester#! and #V House Ordelia#! have raised their banners intending to aid the [adrestian_empire|E]. #V House Edmund#!, #V Heir Claude von Reigan#!, and #V House Daphnel#! have likewise sent aid to [Concept('church', 'church')|E] forces.\n\nBoth sides protest violations from the other, and declare their right to intervene in the war. It seems Oswalds authority is no more."
+ fodlan_unification_war.2003.a: "The Alliance is at a Crossroads"
