Save work so far so I can see git diff when I break something again

--- a/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
+++ b/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
@@ -38,3 +38,16 @@
  fodlan_unification_war.4000.d: "We still have celebrations to attend to"
  fodlan_unification_war.4000.d.tt: "You can manually choose who will rule. This will anger the [agarthans|E]!"
  fodlan_unification_war.4000.unknown: "???"
+ fodlan_unification_war.10.t: "The Battle at Garreg Mach"
+ fodlan_unification_war.10.desc: "$fodlan_unification_war.10.battlefield.tt$\n\n$fodlan_unification_war.10.left_flank.tt$\n$fodlan_unification_war.10.center_flank.tt$\n$fodlan_unification_war.10.right_flank.tt$"
+ fodlan_unification_war.10.current_status: "View Current Status"
+ fodlan_unification_war.10.combat_location: "[Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_battlefield').GetValue), '(int32)1'), 'Outer Walls', '' )][Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_battlefield').GetValue), '(int32)2'), 'Inner Walls', '' )][Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_battlefield').GetValue), '(int32)3'), 'Inner Monastary', '' )]"
+ fodlan_unification_war.10.battlefield.tt: "Ongoing Combat at $fodlan_unification_war.10.combat_location$ (Round $fodlan_unification_war.10.round.tt$ of 24)"
+ fodlan_unification_war.10.round.tt: "[FixedPointToInt(char.MakeScope.Var('local_round').GetValue)]"
+ fodlan_unification_war.10.left_flank.tt: "#bold Units Deployed on the Left#!\n$fodlan_unification_war.10.left_flank_attackers.tt$\n$fodlan_unification_war.10.left_flank_defenders.tt$"
+ fodlan_unification_war.10.left_flank_attackers.tt: "#italic Attackers: $fodlan_unification_war.10_lf_aa$"
+ fodlan_unification_war.10.left_flank_defenders.tt: "#italic Attackers: $fodlan_unification_war.10_lf_da$"
+ fodlan_unification_war.10_lf_aa: "[local_left_attacking_army.MakeScope.Army.GetName]"
+ fodlan_unification_war.10_lf_da: "[local_left_defending_army.MakeScope.Army.GetName]"
+ fodlan_unification_war.10.center_flank.tt: "#bold Units Deployed in the Center#!\n$fodlan_unification_war.10.center_flank_attackers.tt$\n$fodlan_unification_war.10.center_flank_defenders.tt$"
+ fodlan_unification_war.10.right_flank.tt: "#bold Units Deployed on the Right#!\n$fodlan_unification_war.10.right_flank_attackers.tt$\n$fodlan_unification_war.10.right_flank_defenders.tt$"
