Begin implementing actual combat loop

--- a/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
+++ b/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
@@ -38,16 +38,37 @@
  fodlan_unification_war.4000.d: "We still have celebrations to attend to"
  fodlan_unification_war.4000.d.tt: "You can manually choose who will rule. This will anger the [agarthans|E]!"
  fodlan_unification_war.4000.unknown: "???"
- fodlan_unification_war.10.t: "The Battle at Garreg Mach"
- fodlan_unification_war.10.desc: "$fodlan_unification_war.10.battlefield.tt$\n\n$fodlan_unification_war.10.left_flank.tt$\n$fodlan_unification_war.10.center_flank.tt$\n$fodlan_unification_war.10.right_flank.tt$"
- fodlan_unification_war.10.current_status: "View Current Status"
- fodlan_unification_war.10.combat_location: "[Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_battlefield').GetValue), '(int32)1'), 'Outer Walls', '' )][Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_battlefield').GetValue), '(int32)2'), 'Inner Walls', '' )][Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_battlefield').GetValue), '(int32)3'), 'Inner Monastary', '' )]"
- fodlan_unification_war.10.battlefield.tt: "Ongoing Combat at $fodlan_unification_war.10.combat_location$ (Round $fodlan_unification_war.10.round.tt$ of 24)"
- fodlan_unification_war.10.round.tt: "[FixedPointToInt(char.MakeScope.Var('local_round').GetValue)]"
- fodlan_unification_war.10.left_flank.tt: "#bold Units Deployed on the Left#!\n$fodlan_unification_war.10.left_flank_attackers.tt$\n$fodlan_unification_war.10.left_flank_defenders.tt$"
- fodlan_unification_war.10.left_flank_attackers.tt: "#italic Attackers: $fodlan_unification_war.10_lf_aa$"
- fodlan_unification_war.10.left_flank_defenders.tt: "#italic Attackers: $fodlan_unification_war.10_lf_da$"
- fodlan_unification_war.10_lf_aa: "[local_left_attacking_army.MakeScope.Army.GetName]"
- fodlan_unification_war.10_lf_da: "[local_left_defending_army.MakeScope.Army.GetName]"
- fodlan_unification_war.10.center_flank.tt: "#bold Units Deployed in the Center#!\n$fodlan_unification_war.10.center_flank_attackers.tt$\n$fodlan_unification_war.10.center_flank_defenders.tt$"
- fodlan_unification_war.10.right_flank.tt: "#bold Units Deployed on the Right#!\n$fodlan_unification_war.10.right_flank_attackers.tt$\n$fodlan_unification_war.10.right_flank_defenders.tt$"
+ fodlan_event_battle.1.t: "The Battle at [local_battle_location.MakeScope.Province.GetName]"
+ fodlan_event_battle.1.desc: "$fodlan_event_battle.1.battlefield.tt$\n\n$fodlan_event_battle.1.left_flank.tt$\n\n$fodlan_event_battle.1.center_flank.tt$\n\n$fodlan_event_battle.1.right_flank.tt$"
+ fodlan_event_battle.1.current_status: "View Current Status"
+ fodlan_event_battle.1.combat_location: "[Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_battlefield').GetValue), '(int32)1'), 'Outer Walls', '' )][Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_battlefield').GetValue), '(int32)2'), 'Inner Walls', '' )][Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_battlefield').GetValue), '(int32)3'), 'Inner Sanctuary', '' )]"
+ fodlan_event_battle.1.battlefield.tt: "Ongoing Combat at $fodlan_event_battle.1.combat_location$ (Round $fodlan_event_battle.1.round.tt$ of $fodlan_event_battle.1.max_round.tt$)"
+ fodlan_event_battle.1.max_round.tt: "[FixedPointToInt(char.MakeScope.Var('local_max_round').GetValue)]"
+ fodlan_event_battle.1.round.tt: "[FixedPointToInt(char.MakeScope.Var('local_round').GetValue)]"
+ fodlan_event_battle.1.left_flank.tt: "#bold Units Deployed on the Left#!\n$fodlan_event_battle.1.left_flank_attackers$\n$fodlan_event_battle.1.left_flank_defenders$"
+ fodlan_event_battle.1.left_flank_attackers: "#italic Attackers: $fodlan_event_battle.1_lf_aa$ #! Atk: $fodlan_event_battle.1_lf_as$"
+ fodlan_event_battle.1.left_flank_defenders: "#italic Defenders: $fodlan_event_battle.1_lf_da$ #! Def: $fodlan_event_battle.1_lf_ds$"
+ fodlan_event_battle.1_lf_aa: "[local_left_attacking_army.MakeScope.Army.GetName]"
+ fodlan_event_battle.1_lf_da: "[local_left_defending_army.MakeScope.Army.GetName]"
+ fodlan_event_battle.1_lf_as: "[FixedPointToInt(char.MakeScope.Var('local_lf_as').GetValue)]"
+ fodlan_event_battle.1_lf_ds: "[FixedPointToInt(char.MakeScope.Var('local_lf_ds').GetValue)]"
+ fodlan_event_battle.1.center_flank.tt: "#bold Units Deployed in the Center #!\n$fodlan_event_battle.1.center_flank_attackers$\n$fodlan_event_battle.1.center_flank_defenders$"
+ fodlan_event_battle.1.center_flank_attackers: "#italic Attackers: $fodlan_event_battle.1_cf_aa$ #! Atk: $fodlan_event_battle.1_cf_as$"
+ fodlan_event_battle.1.center_flank_defenders: "#italic Defenders: $fodlan_event_battle.1_cf_da$ #! Def: $fodlan_event_battle.1_cf_as$"
+ fodlan_event_battle.1_cf_aa: "[local_center_attacking_army.MakeScope.Army.GetName]"
+ fodlan_event_battle.1_cf_da: "[local_center_defending_army.MakeScope.Army.GetName]"
+ fodlan_event_battle.1_cf_as: "[FixedPointToInt(char.MakeScope.Var('local_cf_as').GetValue)]"
+ fodlan_event_battle.1_cf_ds: "[FixedPointToInt(char.MakeScope.Var('local_cf_ds').GetValue)]"
+ fodlan_event_battle.1.right_flank.tt: "#bold Units Deployed on the Right#!\n$fodlan_event_battle.1.right_flank_attackers$\n$fodlan_event_battle.1.right_flank_defenders$"
+ fodlan_event_battle.1.right_flank_attackers: "#italic Attackers: $fodlan_event_battle.1_rf_aa$ #! Atk: $fodlan_event_battle.1_rf_as$"
+ fodlan_event_battle.1.right_flank_defenders: "#italic Defenders: $fodlan_event_battle.1_rf_da$ #! Atk: $fodlan_event_battle.1_rf_as$"
+ fodlan_event_battle.1_rf_aa: "[local_right_attacking_army.MakeScope.Army.GetName]"
+ fodlan_event_battle.1_rf_da: "[local_right_defending_army.MakeScope.Army.GetName]"
+ fodlan_event_battle.1_rf_as: "[FixedPointToInt(char.MakeScope.Var('local_rf_as').GetValue)]"
+ fodlan_event_battle.1_rf_ds: "[FixedPointToInt(char.MakeScope.Var('local_rf_ds').GetValue)]"
+ fodlan_event_battle.1.help.1: "Each participant in the battle takes turns in a round."
+ fodlan_event_battle.1.help.2: "On each turn they can choose to deploy reserves, perform an action, or wait."
+ fodlan_event_battle.1.help.3: "A unit will rout once their exhaustion hits 100, deploy reserves prior to this happening"
+ fodlan_event_battle.1.help.4: "Once defenders are defeated on any flank or there are no more reserves, the battle moves to the next phase"
+ fodlan_event_battle.1.help.5: "There are three phases: Outer Walls, Inner Walls, and Inner Sanctuary"
+ fodlan_event_battle.1.help.6: "You also have a chance to capture enemy leaders."
