--- a/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
+++ b/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
@@ -61,7 +61,7 @@
  fodlan_event_battle.1_cf_ds: "[FixedPointToInt(char.MakeScope.Var('local_cf_ds').GetValue)]"
  fodlan_event_battle.1.right_flank.tt: "#bold Units Deployed on the Right#!\n$fodlan_event_battle.1.right_flank_attackers$\n$fodlan_event_battle.1.right_flank_defenders$"
  fodlan_event_battle.1.right_flank_attackers: "#italic Attackers: $fodlan_event_battle.1_rf_aa$ #! Atk: $fodlan_event_battle.1_rf_as$"
- fodlan_event_battle.1.right_flank_defenders: "#italic Defenders: $fodlan_event_battle.1_rf_da$ #! Atk: $fodlan_event_battle.1_rf_as$"
+ fodlan_event_battle.1.right_flank_defenders: "#italic Defenders: $fodlan_event_battle.1_rf_da$ #! Def: $fodlan_event_battle.1_rf_as$"
  fodlan_event_battle.1_rf_aa: "[local_right_attacking_army.MakeScope.Army.GetName]"
  fodlan_event_battle.1_rf_da: "[local_right_defending_army.MakeScope.Army.GetName]"
  fodlan_event_battle.1_rf_as: "[FixedPointToInt(char.MakeScope.Var('local_rf_as').GetValue)]"
@@ -72,3 +72,12 @@
  fodlan_event_battle.1.help.4: "Once defenders are defeated on any flank or there are no more reserves, the battle moves to the next phase"
  fodlan_event_battle.1.help.5: "There are three phases: Outer Walls, Inner Walls, and Inner Sanctuary"
  fodlan_event_battle.1.help.6: "You also have a chance to capture enemy leaders."
+ fodlan_event_battle.2.t: "The Battle at [local_battle_location.MakeScope.Province.GetName]"
+ fodlan_event_battle.2.desc: "Choose a flank to send reserves to.\n\n$fodlan_event_battle.1.left_flank.tt$\n\n$fodlan_event_battle.1.center_flank.tt$\n\n$fodlan_event_battle.1.right_flank.tt$"
+ fodlan_event_battle.3.t: "The Battle at [local_battle_location.MakeScope.Province.GetName]"
+ fodlan_event_battle.3.desc: "Choose a regiment to deploy in the $fodlan_event_battle.3.flank$\n\n$fodlan_event_battle.1.left_flank.tt$\n\n$fodlan_event_battle.1.center_flank.tt$\n\n$fodlan_event_battle.1.right_flank.tt$"
+ fodlan_event_battle.3.flank: "[Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_redeploy_flank').GetValue), '(int32)1'), 'left', '' )][Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_redeploy_flank').GetValue), '(int32)2'), 'center', '' )][Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_redeploy_flank').GetValue), '(int32)3'), 'right', '' )]"
+ fodlan_event_battle.3.army.1: "Deploy [local_first_army.MakeScope.Army.GetName]"
+ fodlan_event_battle.3.army.2: "Deploy [local_second_army.MakeScope.Army.GetName]"
+ fodlan_event_battle.3.army.3: "Deploy [local_third_army.MakeScope.Army.GetName]"
+ fodlan_event_battle.3.army.4: "Deploy [local_fourth_army.MakeScope.Army.GetName]"
