Add support for 4 regiments in reserve to be displayed at a time
Some localization stuff

--- a/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
+++ b/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
@@ -75,6 +75,10 @@
  fodlan_event_battle.1.help.7: "You also have a chance to capture enemy leaders."
  fodlan_event_battle.2.t: "The Battle at [local_battle_location.MakeScope.Province.GetName]"
  fodlan_event_battle.2.desc: "Choose a flank to send reserves to.\n\n$fodlan_event_battle.1.left_flank.tt$\n\n$fodlan_event_battle.1.center_flank.tt$\n\n$fodlan_event_battle.1.right_flank.tt$"
+ fodlan_event_battle.2.left: "Left"
+ fodlan_event_battle.2.center: "Center"
+ fodlan_event_battle.2.right: "Right"
+ fodlan_event_battle.back: "Back"
  fodlan_event_battle.3.t: "The Battle at [local_battle_location.MakeScope.Province.GetName]"
  fodlan_event_battle.3.desc: "Choose a regiment to deploy in the $fodlan_event_battle.3.flank$\n\n$fodlan_event_battle.1.left_flank.tt$\n\n$fodlan_event_battle.1.center_flank.tt$\n\n$fodlan_event_battle.1.right_flank.tt$"
  fodlan_event_battle.3.flank: "[Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_redeploy_flank').GetValue), '(int32)1'), 'left', '' )][Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_redeploy_flank').GetValue), '(int32)2'), 'center', '' )][Select_CString(EqualTo_int32( FixedPointToInt(char.MakeScope.Var('local_redeploy_flank').GetValue), '(int32)3'), 'right', '' )]"
