--- a/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
+++ b/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
@@ -54,14 +54,14 @@
  fodlan_event_battle.1_lf_ds: "[FixedPointToInt(char.MakeScope.Var('local_lf_ds').GetValue)]"
  fodlan_event_battle.1.center_flank.tt: "#bold Units Deployed in the Center #!\n$fodlan_event_battle.1.center_flank_attackers$\n$fodlan_event_battle.1.center_flank_defenders$"
  fodlan_event_battle.1.center_flank_attackers: "#italic Attackers: $fodlan_event_battle.1_cf_aa$ #! HP: $fodlan_event_battle.1_cf_as$"
- fodlan_event_battle.1.center_flank_defenders: "#italic Defenders: $fodlan_event_battle.1_cf_da$ #! HP: $fodlan_event_battle.1_cf_as$"
+ fodlan_event_battle.1.center_flank_defenders: "#italic Defenders: $fodlan_event_battle.1_cf_da$ #! HP: $fodlan_event_battle.1_cf_ds$"
  fodlan_event_battle.1_cf_aa: "[local_center_attacking_army.MakeScope.Army.GetName]"
  fodlan_event_battle.1_cf_da: "[local_center_defending_army.MakeScope.Army.GetName]"
  fodlan_event_battle.1_cf_as: "[FixedPointToInt(char.MakeScope.Var('local_cf_as').GetValue)]"
  fodlan_event_battle.1_cf_ds: "[FixedPointToInt(char.MakeScope.Var('local_cf_ds').GetValue)]"
  fodlan_event_battle.1.right_flank.tt: "#bold Units Deployed on the Right#!\n$fodlan_event_battle.1.right_flank_attackers$\n$fodlan_event_battle.1.right_flank_defenders$"
  fodlan_event_battle.1.right_flank_attackers: "#italic Attackers: $fodlan_event_battle.1_rf_aa$ #! HP: $fodlan_event_battle.1_rf_as$"
- fodlan_event_battle.1.right_flank_defenders: "#italic Defenders: $fodlan_event_battle.1_rf_da$ #! HP: $fodlan_event_battle.1_rf_as$"
+ fodlan_event_battle.1.right_flank_defenders: "#italic Defenders: $fodlan_event_battle.1_rf_da$ #! HP: $fodlan_event_battle.1_rf_ds$"
  fodlan_event_battle.1_rf_aa: "[local_right_attacking_army.MakeScope.Army.GetName]"
  fodlan_event_battle.1_rf_da: "[local_right_defending_army.MakeScope.Army.GetName]"
  fodlan_event_battle.1_rf_as: "[FixedPointToInt(char.MakeScope.Var('local_rf_as').GetValue)]"
