Add in effects for personal actions Fix some overlap in scripted_triggers Add in message notification when an action is taken for all players

--- a/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
+++ b/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
@@ -89,3 +89,30 @@
  fodlan_event_battle.4.a: "Yes"
  fodlan_event_battle.4.t: "The Battle at [local_battle_location.MakeScope.Province.GetName]"
  fodlan_event_battle.4.desc: "Deploy [local_army_to_deploy.MakeScope.Army.GetName] in the $fodlan_event_battle.3.flank$. Any surviving troops will remain on the battlefield, while the leader will change.\n\n$fodlan_event_battle.1.left_flank.tt$\n\n$fodlan_event_battle.1.center_flank.tt$\n\n$fodlan_event_battle.1.right_flank.tt$"
+ fodlan_event_battle.10.t: "The Battle at [local_battle_location.MakeScope.Province.GetName]"
+ fodlan_event_battle.10.desc: "Choose an action to perform. Hover over each action to see the effects."
+ fodlan_event_battle.10.demonic_beast: "Unleash Demonic Beasts"
+ fodlan_event_battle.10.help.demonic_beast: "Immediately inflict damage on #V ALL#! units."
+ msg_fodlan_event_battle_demonic_beast: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Unleashed Demonic Beasts"
+ msg_fodlan_event_battle_demonic_beast_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] unleashed Demonic Beasts onto the battlefield, damaging all units."
+ fodlan_event_battle.10.golem: "Deploy Automated Golems"
+ fodlan_event_battle.10.help.golem: "Immediately increase health of all allied units"
+ msg_fodlan_event_battle_golem: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Deployed Automated Golems"
+ msg_fodlan_event_battle_golem_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] deployed Automated Golems. All allied units gained combat strength."
+ fodlan_event_battle.10.personal_deployment_knight: "#V Personal#!: Lead from the Front"
+ fodlan_event_battle.10.help.personal_deployment_knight: "Adds +2 to commander skill of all friendly armies until the end of battle."
+ msg_fodlan_event_battle_deploy_knight: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Enters the Fight"
+ msg_fodlan_event_battle_deploy_knight_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] is personally at the frontlines!"
+ fodlan_event_battle.10.personal_deployment_dragon: "#V Personal#!: Smite the enemy as a Dragon"
+ fodlan_event_battle.10.help.personal_deployment_dragon: "Deals a fixed amount of damage to enemies each round."
+ msg_fodlan_event_battle_deploy_dragon: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Smites Enemies"
+ msg_fodlan_event_battle_deploy_dragon_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] has transformed into a might dragon and is at the frontlines!"
+ fodlan_event_battle.10.personal_deployment_dark_magic: "#V Personal#!: Hex the enemy with Dark Arts"
+ fodlan_event_battle.10.help.personal_deployment_dark_magic: "Nullifies the effect of 1 opponent Personal Deployment."
+ msg_fodlan_event_battle_deploy_dark_mage: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Hexes Enemies"
+ msg_fodlan_event_battle_deploy_dark_mage_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] has started a dark incantation at the frontlines!"
+ fodlan_event_battle.10.personal_deployment_cleric: "#V Personal#!: Bless our troops with Light Arts"
+ fodlan_event_battle.10.help.personal_deployment_cleric: "Heals a fixed amount of damage to allies each round."
+ msg_fodlan_event_battle_deploy_cleric: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Heals Allies"
+ msg_fodlan_event_battle_deploy_cleric_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] is healing and strengthening allies at the front!"
+ fodlan_event_battle.10.help.capture: "Performing this action greatly increases the chance of capture! TODO: Capture not yet implemented"
