--- a/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
+++ b/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
@@ -100,15 +100,15 @@
  msg_fodlan_event_battle_golem: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Deployed Automated Golems"
  msg_fodlan_event_battle_golem_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] deployed Automated Golems. All allied units gained combat strength."
  fodlan_event_battle.10.personal_deployment_knight: "#V Personal#!: Lead from the Front"
- fodlan_event_battle.10.help.personal_deployment_knight: "Adds +2 to commander skill of all friendly armies until the end of battle."
+ fodlan_event_battle.10.help.personal_deployment_knight: "A percent of your prowess will be added to all army leadership until the end of battle."
  msg_fodlan_event_battle_deploy_knight: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Enters the Fight"
  msg_fodlan_event_battle_deploy_knight_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] is personally at the frontlines!"
  fodlan_event_battle.10.personal_deployment_dragon: "#V Personal#!: Smite the enemy as a Dragon"
- fodlan_event_battle.10.help.personal_deployment_dragon: "Deals a fixed amount of damage to enemies each round."
+ fodlan_event_battle.10.help.personal_deployment_dragon: "Deals a fixed amount of damage to enemies each round based on your prowess."
  msg_fodlan_event_battle_deploy_dragon: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Smites Enemies"
  msg_fodlan_event_battle_deploy_dragon_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] has transformed into a might dragon and is at the frontlines!"
  fodlan_event_battle.10.personal_deployment_dark_magic: "#V Personal#!: Hex the enemy with Dark Arts"
- fodlan_event_battle.10.help.personal_deployment_dark_magic: "Nullifies the effect of 1 opponent Personal Deployment."
+ fodlan_event_battle.10.help.personal_deployment_dark_magic: "Choose a deployed character to counter their effect."
  msg_fodlan_event_battle_deploy_dark_mage: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Hexes Enemies"
  msg_fodlan_event_battle_deploy_dark_mage_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] has started a dark incantation at the frontlines!"
  fodlan_event_battle.10.personal_deployment_cleric: "#V Personal#!: Bless our troops with Light Arts"
@@ -116,3 +116,10 @@
  msg_fodlan_event_battle_deploy_cleric: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Heals Allies"
  msg_fodlan_event_battle_deploy_cleric_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] is healing and strengthening allies at the front!"
  fodlan_event_battle.10.help.capture: "Performing this action greatly increases the chance of capture! TODO: Capture not yet implemented"
+ fodlan_event_battle.11.t: "Choose a character deployed on a #V Personal Action#! to Hex. Doing so will disable their current effect on combat."
+ fodlan_event_battle.11.army.1: "Hex [local_first_option.MakeScope.Char.GetShortUINameNoTooltip]"
+ fodlan_event_battle.11.army.2: "Hex [local_second_option.MakeScope.Char.GetShortUINameNoTooltip]"
+ fodlan_event_battle.11.army.3: "Hex [local_third_option.MakeScope.Char.GetShortUINameNoTooltip]"
+ fodlan_event_battle.11.army.4: "Hex [local_fourth_option.MakeScope.Char.GetShortUINameNoTooltip]"
+ fodlan_event_battle.12.desc: "Hex [local_picked_option.Char.GetShortUINameNoTooltip]? Their current combat effect will be disabled."
+ fodlan_event_battle.12.a: "Yes"
