--- a/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
+++ b/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
@@ -89,6 +89,8 @@
  fodlan_event_battle.4.a: "Yes"
  fodlan_event_battle.4.t: "The Battle at [local_battle_location.MakeScope.Province.GetName]"
  fodlan_event_battle.4.desc: "Deploy [local_army_to_deploy.MakeScope.Army.GetName] in the $fodlan_event_battle.3.flank$. Any surviving troops will remain on the battlefield, while the leader will change.\n\n$fodlan_event_battle.1.left_flank.tt$\n\n$fodlan_event_battle.1.center_flank.tt$\n\n$fodlan_event_battle.1.right_flank.tt$"
+ msg_fodlan_event_battle_reserves_deployed: "[LEFT_CHARACTER.GetTitledFirstName] Deploys Reserves"
+ msg_fodlan_event_battle_reserves_deployed_desc: "[LEFT_CHARACTER.GetTitledFirstName] has deployed reserve forces to the frontlines!"
  fodlan_event_battle.10.t: "The Battle at [local_battle_location.MakeScope.Province.GetName]"
  fodlan_event_battle.10.desc: "Choose an action to perform. Hover over each action to see the effects."
  fodlan_event_battle.10.demonic_beast: "Unleash Demonic Beasts"
@@ -97,29 +99,32 @@
  msg_fodlan_event_battle_demonic_beast_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] unleashed Demonic Beasts onto the battlefield, damaging all units."
  fodlan_event_battle.10.golem: "Deploy Automated Golems"
  fodlan_event_battle.10.help.golem: "Immediately increase health of all allied units"
- msg_fodlan_event_battle_golem: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Deployed Automated Golems"
- msg_fodlan_event_battle_golem_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] deployed Automated Golems. All allied units gained combat strength."
+ msg_fodlan_event_battle_golem: "[LEFT_CHARACTER.GetTitledFirstName] Deployed Automated Golems"
+ msg_fodlan_event_battle_golem_desc: "[LEFT_CHARACTER.GetTitledFirstName] deployed Automated Golems. All allied units gained combat strength."
  fodlan_event_battle.10.personal_deployment_knight: "#V Personal#!: Lead from the Front"
  fodlan_event_battle.10.help.personal_deployment_knight: "A percent of your prowess will be added to all army leadership until the end of battle."
- msg_fodlan_event_battle_deploy_knight: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Enters the Fight"
- msg_fodlan_event_battle_deploy_knight_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] is personally at the frontlines!"
+ msg_fodlan_event_battle_deploy_knight: "[LEFT_CHARACTER.GetTitledFirstName] Enters the Fight"
+ msg_fodlan_event_battle_deploy_knight_desc: "[LEFT_CHARACTER.GetTitledFirstName] is personally at the frontlines!"
  fodlan_event_battle.10.personal_deployment_dragon: "#V Personal#!: Smite the enemy as a Dragon"
  fodlan_event_battle.10.help.personal_deployment_dragon: "Deals a fixed amount of damage to enemies each round based on your prowess."
- msg_fodlan_event_battle_deploy_dragon: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Smites Enemies"
- msg_fodlan_event_battle_deploy_dragon_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] has transformed into a might dragon and is at the frontlines!"
+ msg_fodlan_event_battle_deploy_dragon: "[LEFT_CHARACTER.GetTitledFirstName] Smites Enemies"
+ msg_fodlan_event_battle_deploy_dragon_desc: "[LEFT_CHARACTER.GetTitledFirstName] has transformed into a might dragon and is at the frontlines!"
  fodlan_event_battle.10.personal_deployment_dark_magic: "#V Personal#!: Hex the enemy with Dark Arts"
  fodlan_event_battle.10.help.personal_deployment_dark_magic: "Choose a deployed character to counter their effect."
- msg_fodlan_event_battle_deploy_dark_mage: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Hexes Enemies"
- msg_fodlan_event_battle_deploy_dark_mage_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] has started a dark incantation at the frontlines!"
+ msg_fodlan_event_battle_deploy_dark_mage: "[LEFT_CHARACTER.GetTitledFirstName] Hexes [RIGHT_CHARACTER.GetTitledFirstName]"
+ msg_fodlan_event_battle_deploy_dark_mage_desc: "[LEFT_CHARACTER.GetTitledFirstName] has hexed [RIGHT_CHARACTER.GetTitledFirstName], forcing them to retreat from the frontlines!"
  fodlan_event_battle.10.personal_deployment_cleric: "#V Personal#!: Bless our troops with Light Arts"
  fodlan_event_battle.10.help.personal_deployment_cleric: "Heals a fixed amount of damage to allies each round."
- msg_fodlan_event_battle_deploy_cleric: "[LEFT_CHARACTER.GetShortUINameNoTooltip] Heals Allies"
- msg_fodlan_event_battle_deploy_cleric_desc: "[LEFT_CHARACTER.GetShortUINameNoTooltip] is healing and strengthening allies at the front!"
+ msg_fodlan_event_battle_deploy_cleric: "[LEFT_CHARACTER.GetTitledFirstName] Heals Allies"
+ msg_fodlan_event_battle_deploy_cleric_desc: "[LEFT_CHARACTER.GetTitledFirstName] is healing and strengthening allies at the front!"
  fodlan_event_battle.10.help.capture: "Performing this action greatly increases the chance of capture! TODO: Capture not yet implemented"
- fodlan_event_battle.11.t: "Choose a character deployed on a #V Personal Action#! to Hex. Doing so will disable their current effect on combat."
- fodlan_event_battle.11.army.1: "Hex [local_first_option.MakeScope.Char.GetShortUINameNoTooltip]"
- fodlan_event_battle.11.army.2: "Hex [local_second_option.MakeScope.Char.GetShortUINameNoTooltip]"
- fodlan_event_battle.11.army.3: "Hex [local_third_option.MakeScope.Char.GetShortUINameNoTooltip]"
- fodlan_event_battle.11.army.4: "Hex [local_fourth_option.MakeScope.Char.GetShortUINameNoTooltip]"
- fodlan_event_battle.12.desc: "Hex [local_picked_option.Char.GetShortUINameNoTooltip]? Their current combat effect will be disabled."
+ fodlan_event_battle.11.desc: "Choose a character deployed on a #V Personal Action#! to Hex. Doing so will disable their current effect on combat."
+ fodlan_event_battle.11.attackers: "#D DEBUG#!: Attackers"
+ fodlan_event_battle.11.defenders: "#D DEBUG#!: Defenders"
+ fodlan_event_battle.11.deployed: "[temp_local_person.MakeScope.Char.GetTitledFirstName]"
+ fodlan_event_battle.11.a: "Hex [local_first_option.MakeScope.Char.GetTitledFirstName]"
+ fodlan_event_battle.11.b: "Hex [local_second_option.MakeScope.Char.GetTitledFirstName]"
+ fodlan_event_battle.11.c: "Hex [local_third_option.MakeScope.Char.GetTitledFirstName]"
+ fodlan_event_battle.11.d: "Hex [local_fourth_option.MakeScope.Char.GetTitledFirstName]"
+ fodlan_event_battle.12.desc: "Hex [local_picked_option.MakeScope.Char.GetTitledFirstName]? Their current combat effect will be disabled."
  fodlan_event_battle.12.a: "Yes"
