Save work in progress combat calculation function

--- a/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
+++ b/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
@@ -66,6 +66,7 @@
  fodlan_event_battle.1_rf_da: "[local_right_defending_army.MakeScope.Army.GetName]"
  fodlan_event_battle.1_rf_as: "[FixedPointToInt(char.MakeScope.Var('local_rf_as').GetValue)]"
  fodlan_event_battle.1_rf_ds: "[FixedPointToInt(char.MakeScope.Var('local_rf_ds').GetValue)]"
+ fodlan_event_battle.1.help: "Help (See Tooltip)"
  fodlan_event_battle.1.help.1: "Each participant in the battle takes turns in a round."
  fodlan_event_battle.1.help.2: "On each turn they can choose to deploy reserves, perform an action, or wait."
  fodlan_event_battle.1.help.3: "A unit will rout once their HP hits 0, deploy reserves prior to this happening"
@@ -73,6 +74,10 @@
  fodlan_event_battle.1.help.5: "Once defenders are defeated on any flank or there are no more reserves, the battle moves to the next phase"
  fodlan_event_battle.1.help.6: "There are three phases: Outer Walls, Inner Walls, and Inner Sanctuary"
  fodlan_event_battle.1.help.7: "You also have a chance to capture enemy leaders."
+ fodlan_event_battle.1.reserves: "Deploy Reserves"
+ fodlan_event_battle.1.action: "Perform Action"
+ fodlan_event_battle.1.wait: "Wait"
+ fodlan_event_battle.1.ai: "#D DEBUG#!: AI Action"
  fodlan_event_battle.2.t: "The Battle at [local_battle_location.MakeScope.Province.GetName]"
  fodlan_event_battle.2.desc: "Choose a flank to send reserves to.\n\n$fodlan_event_battle.1.left_flank.tt$\n\n$fodlan_event_battle.1.center_flank.tt$\n\n$fodlan_event_battle.1.right_flank.tt$"
  fodlan_event_battle.2.left: "Left"
