--- a/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
+++ b/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
@@ -5,6 +5,15 @@
  fodlan_unification_war.4.t: "Imperial Invasion Begins"
  fodlan_unification_war.4.desc: "Ravens fly to all corners of [fodlan|E] detailing the arrival of Imperial troops at the foot of #V Garreg Mach Monastary#!.\n\nLoyalists of the [church|E] and [adrestian_empire|E] engage in battle while those who have yet to pick a side come under increasing pressure to declare"
  fodlan_unification_war.4.a: "What will the outcome be?"
+ fodlan_unification_war.imperial_first.a: "Imperial 1st Regiment"
+ fodlan_unification_war.imperial_second.a: "Imperial 2nd Regiment"
+ fodlan_unification_war.imperial_third.a: "Imperial 3rd Regiment"
+ fodlan_unification_war.black_eagles.a: "Black Eagles"
+ fodlan_unification_war.blue_lions.a: "Blue Lions"
+ fodlan_unification_war.golden_deer.a: "Golden Deer"
+ fodlan_unification_war.knights_of_seiros.a: "Knights of Seiros"
+ fodlan_unification_war.church_militia.a: "Monastary Militia"
+ fodlan_unification_war.agarthan_mages.a: "Agarthan Mages"
  fodlan_unification_war.2001.t: "Alliance Roundtable Debate"
  fodlan_unification_war.2001.desc: "A heated debate occurred today at the #V Alliance Roundatable#! as the #V Five Great Lords#! argued over how to respond to the upcoming war.\n\n#V House Gloucester#! and #V House Ordelia#! insists the best course of action is to join the Empire while the Alliance still has leverage, and has come with promises of autonomy from the crown.\n\nThe ever faithful #V House Edmund#! insists the alliance should aid the [church|E].\n\n#V House Goneril#! is surprisingly absent, having sent a raven insisting their focus is on defending [fodlan|E]s borders.\n\nAlthough sympathetic towards #V House Edmund#!, #V Leader Oswald#! declared the [leicester_alliance|E] shall remain neutral and have no involvement in any future hostilities."
  fodlan_unification_war.2001.a: "Time well tell if this is a wise decision"
@@ -20,7 +29,7 @@
  fodlan_unification_war.2005.t: "House Gloucester Seeks Imperial Protection"
  fodlan_unification_war.2005.desc: "House Gloucester seeks to serve their legal soverign and rejoin the [adrestian_empire|E]. However, their position within the [leicester_alliance|E] is a precarious one surrounded by enemies on all sides.\n\nThey have requested our aid in securing a supply line to the south so that they can prevent #V House Daphnel#! and #V House Edmund#! from sending aid to the church."
  fodlan_unification_war.2005.a: "Dispatch a regiment of troops to aid them"
- fidlan_unification_war.2005.a.tt: "We will be weaker in the upcoming battle. They will owe us a favor."
+ fodlan_unification_war.2005.a.tt: "We will be weaker in the upcoming battle. They will owe us a favor."
  fodlan_unification_war.2005.b: "We will aid them after taking the Academy"
  fodlan_unification_war.2005.b.tt: "We will be stronger in the upcoming battle. They will be on their own."
  fodlan_unification_war.2006.t: "Ladislava Regiment Arrives"
