Fix most things

--- a/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
+++ b/localization/english/event_localization/fodlan/major_incidents/fodlan_unification_war_l_english.yml
@@ -106,6 +106,8 @@
  fodlan_event_battle.4.desc: "Deploy [local_army_to_deploy.MakeScope.Army.GetName] in the $fodlan_event_battle.3.flank$. Any surviving troops will remain on the battlefield, while the leader will change.\n\n$fodlan_event_battle.1.left_flank.tt$\n\n$fodlan_event_battle.1.center_flank.tt$\n\n$fodlan_event_battle.1.right_flank.tt$"
  msg_fodlan_event_battle_reserves_deployed: "[LEFT_CHARACTER.GetTitledFirstName] Deploys Reserves"
  msg_fodlan_event_battle_reserves_deployed_desc: "[LEFT_CHARACTER.GetTitledFirstName] has deployed reserve forces to the frontlines!"
+ msg_fodlan_event_battle_phase_increase: "[LEFT_CHARACTER.GetTitledFirstName] Advances on [RIGHT_CHARACTER.GetTitledFirstName]"
+ msg_fodlan_event_battle_phase_increase_desc: "[LEFT_CHARACTER.GetTitledFirstName]'s forces have breached [RIGHT_CHARACTER.GetTitledFirstName]'s defensive lines!"
  fodlan_event_battle.10.t: "The Battle at [local_battle_location.MakeScope.Province.GetName]"
  fodlan_event_battle.10.desc: "Choose an action to perform. Hover over each action to see the effects."
  fodlan_event_battle.10.demonic_beast: "Unleash Demonic Beasts"
@@ -134,8 +136,8 @@
  msg_fodlan_event_battle_deploy_cleric_desc: "[LEFT_CHARACTER.GetTitledFirstName] is healing and strengthening allies at the front!"
  fodlan_event_battle.10.help.capture: "Performing this action greatly increases the chance of capture! TODO: Capture not yet implemented"
  fodlan_event_battle.11.desc: "Choose a character deployed on a #V Personal Action#! to Hex. Doing so will disable their current effect on combat."
- fodlan_event_battle.11.attackers: "#D DEBUG#!: Attackers"
- fodlan_event_battle.11.defenders: "#D DEBUG#!: Defenders"
+ fodlan_event_battle.11.attackers: "#D DEBUG#!: Deployed Attackers"
+ fodlan_event_battle.11.defenders: "#D DEBUG#!: Deployed Defenders"
  fodlan_event_battle.11.deployed: "[temp_local_person.MakeScope.Char.GetTitledFirstName]"
  fodlan_event_battle.11.a: "Hex [local_first_option.MakeScope.Char.GetTitledFirstName]"
  fodlan_event_battle.11.b: "Hex [local_second_option.MakeScope.Char.GetTitledFirstName]"
