--- a/localization/english/event_localization/lifestyle/warfare/warhorse_events_l_english.yml
+++ b/localization/english/event_localization/lifestyle/warfare/warhorse_events_l_english.yml
@@ -43,6 +43,10 @@
  warhorse.1001.d:0 "If there is one thing [ROOT.Char.Custom('HorseStorySheHe')] is lacking it is fierceness!"
  warhorse.1001.e:0 "I am not interested."
  warhorse.1001.e.tt:1 "#F "[THIS.Char.Custom('WarhorseStoryName')] needs no other trainer than me!"#!"
+ warhorse.1001.f:0 "That's what I pay a $master_of_horse_court_position$ for!"
+ warhorse.1001.f.tt:0 "Your $master_of_horse_court_position$ starts training your [ROOT.Char.Custom('HorseStoryMareStallion')]."
+ warhorse.1001.f.failure:0 "You overestimated your $master_of_horse_court_position$"
+ warhorse.1001.f.failure.tt:0 "[m_horse.GetTitledFirstNameNoTooltip] fails at training [ROOT.Char.Custom('WarhorseStoryName')]."
 
  warhorse.1002.desc:0 "[ROOT.Char.Custom('WarhorseStoryName')] took to [ROOT.Char.Custom('HorseStoryHerHis')] training well, and results could be seen instantly!"
  warhorse.1002.a:0 "That was money well spent!"
