--- a/localization/english/regiment_l_english.yml
+++ b/localization/english/regiment_l_english.yml
@@ -31,15 +31,18 @@
  REGIMENT_TERRAIN_MODIFIER_TOOLTIP:0 "#T In [RegimentTerrainModifier.GetTerrain.GetName]#!\n[RegimentTerrainModifier.GetEffectString]"
  REGIMENT_TERRAIN_BONUS_HEADER:0 "[terrain|E] Effects:"
  REGIMENT_TERRAIN_BONUS_NONE:0 "#weak No terrain effects#!"
- REGIMENT_DAMAGE_TT:1 "#T [damage|E]: [MenAtArmsType.GetStat( GetPlayer, 'damage' )|0V]#!\n[MenAtArmsType.GetStatDesc( GetPlayer, 'damage' )]"
- REGIMENT_TOUGHNESS_TT:1 "#T [toughness|E]: [MenAtArmsType.GetStat( GetPlayer, 'toughness' )|0V]#!\n[MenAtArmsType.GetStatDesc( GetPlayer, 'toughness' )]"
- REGIMENT_PURSUIT_TT:1 "#T [pursuit|E]: [MenAtArmsType.GetStat( GetPlayer, 'pursuit' )|0V]#!\n[MenAtArmsType.GetStatDesc( GetPlayer, 'pursuit' )]"
- REGIMENT_SCREEN_TT:1 "#T [screen|E]: [MenAtArmsType.GetStat( GetPlayer, 'screen' )|0V]#!\n[MenAtArmsType.GetStatDesc( GetPlayer, 'screen' )]"
+ REGIMENT_WINTER_EFFECT_HEADER:0 "Winter Effects:"
+ REGIMENT_DAMAGE_TT:2 "#T [damage|E]: [MenAtArmsType.GetStat( GetPlayer, 'damage' )|1V]#!\n[MenAtArmsType.GetStatDesc( GetPlayer, 'damage' )]"
+ REGIMENT_TOUGHNESS_TT:2 "#T [toughness|E]: [MenAtArmsType.GetStat( GetPlayer, 'toughness' )|1V]#!\n[MenAtArmsType.GetStatDesc( GetPlayer, 'toughness' )]"
+ REGIMENT_PURSUIT_TT:2 "#T [pursuit|E]: [MenAtArmsType.GetStat( GetPlayer, 'pursuit' )|1V]#!\n[MenAtArmsType.GetStatDesc( GetPlayer, 'pursuit' )]"
+ REGIMENT_SCREEN_TT:2 "#T [screen|E]: [MenAtArmsType.GetStat( GetPlayer, 'screen' )|1V]#!\n[MenAtArmsType.GetStatDesc( GetPlayer, 'screen' )]"
  REGIMENT_SIEGE:2 "+[MenAtArmsType.GetStat( GetPlayer, 'siege_value' )|1]/day"
  REGIMENT_SIEGE_TT:1 "#T [siege_progress|E]: [MenAtArmsType.GetStat( GetPlayer, 'siege_value' )|1V]/day#!\n[MenAtArmsType.GetStatDesc( GetPlayer, 'siege_value' )]"
  REGIMENT_SIEGE_MAX_FORT_LEVEL:1 "Effective up to [fort_level|E] #high [MenAtArmsType.GetMaxFortLevel]#!"
  REGIMENT_STAT_ENTRY:0 "$KEY$: $VALUE|+=0$"
  BASE_VALUE_SIEGE:0 "Base: $VALUE|V1$"
+ REGIMENT_WINTER_NORMAL_MODIFIER_TOOLTIP:2 "#T In Normal Winter#!\n[MenAtArmsType.GetWinterNormalModifier.GetEffectString]"
+ REGIMENT_WINTER_HARSH_MODIFIER_TOOLTIP:2 "#T In Harsh Winter#!\n[MenAtArmsType.GetWinterHarshModifier.GetEffectString]"
  
  #Regular MaA
  myrmidon:0 "Myrmidons"
